[gd_scene load_steps=27 format=3 uid="uid://0edfjrrf5011"]

[ext_resource type="Texture2D" uid="uid://bypu3mxifsd3a" path="res://Assets/Spring Mechanics/Bees/Blender/Bee-Aseprite-16x16.png" id="1_7ab61"]
[ext_resource type="Texture2D" uid="uid://damd3v81dmwkc" path="res://Assets/Spring Mechanics/Bees/Blender/bee-shadow.png" id="1_lr6y7"]
[ext_resource type="Script" uid="uid://bxbu1g4pahb7t" path="res://Components/Mechanics/Spring Mechanics/BeeSwarm.gd" id="1_tbglw"]
[ext_resource type="Script" uid="uid://b6khrunjcvna1" path="res://Components/Mechanics/Spring Mechanics/SingleBee.gd" id="3_0vp1r"]
[ext_resource type="Texture2D" uid="uid://cixud3jff2kmj" path="res://Assets/Particles/dot2.png" id="5_x3nmx"]
[ext_resource type="AudioStream" uid="uid://by0kgpsbqlbfr" path="res://Sounds/SFX/BeeSwarmBuzzingIdle.wav" id="6_dgfp4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lr6y7"]
atlas = ExtResource("1_7ab61")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_51wh5"]
atlas = ExtResource("1_7ab61")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_qvual"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lr6y7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51wh5")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_7ab61"]
resource_name = "Fly_1"
length = 2.0
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-14, -15), Vector2(-14, -10), Vector2(-14, -15)]
}

[sub_resource type="Animation" id="Animation_51wh5"]
resource_name = "Fly_2"
length = 1.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Bee2:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.75, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(4, 10), Vector2(4, 5), Vector2(4, 10)]
}

[sub_resource type="Animation" id="Animation_3e2b1"]
resource_name = "Fly_3"
length = 2.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Bee3:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.25, 2.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(24, -17), Vector2(24, -12), Vector2(24, -17)]
}

[sub_resource type="Animation" id="Animation_lr6y7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-14, -15)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Bee2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, 10)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Bee3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(24, -17)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../Shadow/ShadowSprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.7, 1.7)]
}

[sub_resource type="Animation" id="Animation_j5cbk"]
resource_name = "shadow-pulsate"
length = 2.0
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../Shadow/ShadowSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1.7, 1.7), Vector2(1.5, 1.5), Vector2(1.7, 1.7)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_51wh5"]
_data = {
&"Fly_1": SubResource("Animation_7ab61"),
&"Fly_2": SubResource("Animation_51wh5"),
&"Fly_3": SubResource("Animation_3e2b1"),
&"RESET": SubResource("Animation_lr6y7"),
&"shadow-pulsate": SubResource("Animation_j5cbk")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tbglw"]
custom_solver_bias = 1.0
size = Vector2(192, 192)

[sub_resource type="Curve" id="Curve_dgfp4"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.45801526, 1), 0.0, 0.0, 0, 0, Vector2(0.5038168, 1), 0.18165329, 0.18165329, 0, 0, Vector2(0.7442748, 1), 0.0, 0.0, 0, 0, Vector2(0.8015267, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 6

[sub_resource type="CurveTexture" id="CurveTexture_8gxw5"]
curve = SubResource("Curve_dgfp4")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_dgfp4"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(64, 64, 64)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
radial_velocity_min = -2.2351742e-05
radial_velocity_max = 15.999977
gravity = Vector3(0, 0, 0)
scale_min = 0.29999998
scale_max = 0.39999998
scale_curve = SubResource("CurveTexture_8gxw5")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_dgfp4"]
load_path = "res://.godot/imported/dot2.png-428e58481062f56bed764270fe86575b.ctex"

[sub_resource type="CurveTexture" id="CurveTexture_y0afb"]
curve = SubResource("Curve_dgfp4")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_8gxw5"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(64, 64, 64)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
radial_velocity_min = -2.2351742e-05
radial_velocity_max = 15.999977
gravity = Vector3(0, 0, 0)
scale_min = 0.19999999
scale_max = 0.29999998
scale_curve = SubResource("CurveTexture_y0afb")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_y0afb"]
load_path = "res://.godot/imported/dot2.png-428e58481062f56bed764270fe86575b.ctex"

[sub_resource type="CurveTexture" id="CurveTexture_ukgcl"]
curve = SubResource("Curve_dgfp4")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ukgcl"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(64, 64, 64)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
radial_velocity_min = -2.2351742e-05
radial_velocity_max = 15.999977
gravity = Vector3(0, 0, 0)
scale_min = 0.099999994
scale_max = 0.19999999
scale_curve = SubResource("CurveTexture_ukgcl")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dgfp4"]
size = Vector2(192, 192)

[node name="BeeSwarm" type="StaticBody2D" node_paths=PackedStringArray("bee_sprites", "animation_players")]
modulate = Color(1.096, 1.096, 1.096, 1)
z_index = 7
collision_layer = 16
collision_mask = 3
script = ExtResource("1_tbglw")
bee_sprites = [NodePath("Visuals/Bee1"), NodePath("Visuals/Bee2"), NodePath("Visuals/Bee3")]
animation_players = [NodePath("Visuals/AnimationPlayerBee1"), NodePath("Visuals/AnimationPlayerBee2"), NodePath("Visuals/AnimationPlayerBee3")]

[node name="Visuals" type="Node2D" parent="."]
position = Vector2(-5, 0)

[node name="Bee1" type="AnimatedSprite2D" parent="Visuals"]
position = Vector2(-14, -15)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_qvual")
autoplay = "default"
frame_progress = 0.8764309
script = ExtResource("3_0vp1r")

[node name="Bee2" type="AnimatedSprite2D" parent="Visuals"]
position = Vector2(4, 10)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_qvual")
autoplay = "default"
frame_progress = 0.5309246
script = ExtResource("3_0vp1r")

[node name="Bee3" type="AnimatedSprite2D" parent="Visuals"]
position = Vector2(24, -17)
scale = Vector2(-2, 2)
sprite_frames = SubResource("SpriteFrames_qvual")
autoplay = "default"
frame_progress = 0.40531987
script = ExtResource("3_0vp1r")
init_scale = Vector2(-2, 2)

[node name="AnimationPlayerBee1" type="AnimationPlayer" parent="Visuals"]
root_node = NodePath("../Bee1")
libraries = {
&"": SubResource("AnimationLibrary_51wh5")
}
autoplay = "Fly_1"

[node name="AnimationPlayerBee2" type="AnimationPlayer" parent="Visuals"]
root_node = NodePath("../Bee1")
libraries = {
&"": SubResource("AnimationLibrary_51wh5")
}
autoplay = "Fly_2"

[node name="AnimationPlayerBee3" type="AnimationPlayer" parent="Visuals"]
root_node = NodePath("../Bee1")
libraries = {
&"": SubResource("AnimationLibrary_51wh5")
}
autoplay = "Fly_3"

[node name="Shadow" type="Node2D" parent="."]

[node name="ShadowSprite" type="Sprite2D" parent="Shadow"]
visible = false
modulate = Color(0.25, 0.194, 0.14500001, 0.21176471)
position = Vector2(0, 24)
scale = Vector2(1.7, 1.7)
texture = ExtResource("1_lr6y7")

[node name="AnimationPlayerShadow" type="AnimationPlayer" parent="Shadow"]
root_node = NodePath("../../Visuals/Bee1")
libraries = {
&"": SubResource("AnimationLibrary_51wh5")
}
autoplay = "shadow-pulsate"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_tbglw")

[node name="TimerAggroCooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="Particles" type="Node2D" parent="."]

[node name="GlowySparkles" type="GPUParticles2D" parent="Particles"]
self_modulate = Color(5.5101075, 4.476211, 1.0791215, 0.1254902)
amount = 16
texture = ExtResource("5_x3nmx")
lifetime = 2.0
process_material = SubResource("ParticleProcessMaterial_dgfp4")

[node name="GlowySparkles2" type="GPUParticles2D" parent="Particles"]
self_modulate = Color(2.6744397, 0.7134023, 0, 1)
amount = 16
texture = SubResource("CompressedTexture2D_dgfp4")
lifetime = 2.0
process_material = SubResource("ParticleProcessMaterial_8gxw5")

[node name="GlowySparkles3" type="GPUParticles2D" parent="Particles"]
self_modulate = Color(2.2366564, 0.5759461, 0.16067907, 1)
amount = 16
texture = SubResource("CompressedTexture2D_y0afb")
lifetime = 2.0
process_material = SubResource("ParticleProcessMaterial_ukgcl")

[node name="AreaCheckForCreatures" type="Area2D" parent="."]
collision_layer = 4096
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaCheckForCreatures"]
shape = SubResource("RectangleShape2D_dgfp4")

[node name="AudioBuzzing" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_dgfp4")
volume_db = -56.952
pitch_scale = 1.25
autoplay = true
bus = &"sfx"

[connection signal="timeout" from="TimerAggroCooldown" to="." method="_on_timer_aggro_cooldown_timeout"]
